Gaming sessions can now be deleted
