# docs/API-docs 1.0.yaml
@@ -94,7 +94,7 @@ paths:
               schema:
                 type: array
                 items:
-                $ref: "#/components/schemas/Player"
+                  $ref: "#/components/schemas/Player"
         404:
           $ref: "#/components/responses/404NotFound"
 
@@ -271,7 +271,7 @@ paths:
     get:
       tags:
         - Sessions
-      summary: Get a sessions given its ID
+      summary: Gets a session given its ID
       security:
         - bearerAuth: []
       parameters:
@@ -329,6 +329,34 @@ paths:
           $ref: "#/components/responses/404NotFound"
         409:
           $ref: "#/components/responses/409AlreadyExists"
+    delete:
+      tags:
+        - Sessions
+      summary: Deletes a session
+      security:
+        - bearerAuth: []
+      parameters:
+        - name: sessionID
+          in: path
+          description: ID of the session
+          required: true
+          schema:
+            type: integer
+            minimum: 0
+      responses:
+        200:
+          description: Session was deleted successfully
+          content:
+            application/json:
+              schema:
+                type: string
+                example: Session was deleted successfully
+        400:
+          $ref: "#/components/responses/400BadRequest"
+        401:
+          $ref: "#/components/responses/401Unauthorized"
+        404:
+          $ref: "#/components/responses/404NotFound"
 
 components:
   securitySchemes:
